# Horust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Contributing.md  Cross.toml  DEVELOPEMENT.md  DEVELOPMENT.md  DOCUMENTATION.md  Dockerfile  Makefile  README.md  TODO.md  default.nix  envd.Dockerfile  flake.nix  package.nix  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  enhancement.md  feature.md
.github/workflows/: CI.yml  audit.yml  release.yml
commands/: Cargo.toml  README.md  build.rs
commands/src/: client.rs  commands.proto  lib.rs  server.rs
commands/src/proto/: messages.rs  mod.rs  tutorial.rs
commands/tests/: simple.rs
docs/: README.md  _config.yml
example_services/: first.toml  sample_service.toml  second.toml  templating.toml
examples/services/: first.sh  first.toml
examples/services/1/base/: first.sh  first.toml
examples/services/2/bigger/: failing.sh  first.sh  first.toml  second.toml
examples/services/failure/: service-sleep.toml  service.toml  sleep.sh
examples/services/healthcheck/: first.sh  first.toml  http.sh  http.toml
examples/services/longrunning/: my-first-service.toml  my-second-service.toml
examples/services/termination/: main.sh  my-first-service.toml
horust/: Cargo.toml  LICENSE.txt
horust/example_services/: backend.toml  database.toml  sample_service.toml  templating.toml
horust/src/: lib.rs  main.rs
horust/src/horust/: bus.rs  commands_handler.rs  error.rs  mod.rs  signal_safe.rs  uds_messages.rs
horust/src/horust/formats/: horust_config.rs  mod.rs  service.rs
horust/src/horust/healthcheck/: checks.rs  mod.rs
horust/src/horust/supervisor/: mod.rs  process_spawner.rs  reaper.rs  repo.rs  service_handler.rs  signal_handling.rs
horust/tests/: horust.rs  section_environment.rs  section_failure.rs  section_general.rs  section_healthiness.rs  section_restart.rs  section_termination.rs  service_deserialization.rs
horust/tests/utils/: mod.rs
horustctl/: Cargo.toml  README.md
horustctl/src/: main.rs
horustctl/tests/: cli.rs
localdev/: Dockerfile  dummy.rs
src/: dummy.rs  error.rs  formats.rs  horust.rs  lib.rs  main.rs  runtime.rs
src/horust/: bus.rs  dispatcher.rs  error.rs  formats.rs  healthcheck.rs  mod.rs  reaper.rs  repository.rs  runtime.rs  service_handler.rs  signal_handling.rs  signal_safe.rs
src/horust/formats/: horust_config.rs  mod.rs  service.rs  service_handler.rs
src/horust/healthcheck/: checks.rs  mod.rs  repo.rs
src/horust/runtime/: mod.rs  process_spawner.rs  reaper.rs  repo.rs  service_handler.rs  signal_handling.rs
src/horust/supervisor/: mod.rs  process_spawner.rs  reaper.rs  repo.rs  service_handler.rs  signal_handling.rs
tests/: horust.rs  section_environment.rs  section_failure.rs  section_general.rs  section_healthiness.rs  section_restart.rs  section_termination.rs  service_deserialization.rs
tests/example_services/: first.toml  second.toml
tests/utils/: mod.rs
