[package]
name = "horust"
version = "0.1.5"
authors = ["Federico Ponzi <federico.ponzi92@gmail.com>"]
description = "A complete supervisor and init system, designed for running in containers."
edition = "2018"
license = "MIT"
repository = "https://github.com/FedericoPonzi/horust"
homepage = "https://github.com/FedericoPonzi/horust"
readme = "README.md"
keywords = ["init", "container", "supervisor"]
categories = ["command-line-utilities"]
include = [ "src/**/*", "Cargo.*", "LICENSE.txt", "README.md", ]

[dependencies]
structopt = "~0.3"
# Still not released: clap = { git = "https://github.com/clap-rs/clap/", rev = "28c46b5", version = "3.0.0-beta.1" }
crossbeam = "~0.8"
env_logger = "~0.9"
humantime-serde = "~1.0"
libc = "~0.2"
log = "~0.4"
nix = "~0.23"
reqwest = { version = "~0.11", features = ["blocking", "json"], optional = true, default-features = false }
serde = {version = "~1.0", features = ["derive"] }
shlex = "~1.1"
toml = "~0.5"
maplit = "~1.0"
shellexpand = "~2.1"
anyhow = "~1.0"
thiserror = "~1.0"
itertools = "~0.10"

[features]
default = ["http-healthcheck"]
http-healthcheck = ["reqwest"]

[dev-dependencies]
assert_cmd = "~2.0"
predicates = "~2.1"
tempdir = "~0.3"
rand = "~0.8"
