[package]
name = "horust"
version = "0.1.7"
authors = ["Federico Ponzi <me@fponzi.me>"]
description = "A complete supervisor and init system, designed for running in containers."
edition = "2021"
license = "MIT"
repository = "https://github.com/FedericoPonzi/horust"
homepage = "https://github.com/FedericoPonzi/horust"
readme = "README.md"
keywords = ["init", "container", "supervisor"]
categories = ["command-line-utilities"]
include = ["src/**/*", "Cargo.*", "LICENSE.txt", "README.md", "/example_services/**/*"]

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
crossbeam = "~0.8"
env_logger = "0.10.0"
humantime-serde = "~1.1"
libc = "0.2.147"
log = "~0.4"
nix = "~0.26"
reqwest = { version = "0.11.18", features = ["blocking", "json"], optional = true, default-features = false }
serde = { version = "~1.0", features = ["derive"] }
shlex = "~1.1"
toml = "~0.7"
maplit = "~1.0"
shellexpand = "~3.1"
anyhow = "~1.0"
thiserror = "~1.0"

[features]
default = ["http-healthcheck"]
http-healthcheck = ["reqwest"]

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "~3.0"
tempdir = "~0.3"
rand = "~0.8"

[profile.release]
strip = "symbols"

