[package]
name = "horust-commands-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
prost = "~0.13"
anyhow = "~1.0"
tokio = { version = "~1.41", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tracing-test = { version = "0.2", features = ["no-env-filter"] }

[build-dependencies]
prost-build = { version = "~0.13" }