[package]
name = "horust-commands-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
prost = "~0.13"
anyhow = "~1.0"
log = "~0.4"

[dev-dependencies]
env_logger = "~0.11"

[build-dependencies]
prost-build = { version = "~0.13" }