[package]
name = "horust-commands-lib"
version = "0.1.0"
edition = "2021"
authors = ["Federico Ponzi <me@fponzi.me>"]
description = "A complete supervisor and init system, designed for running in containers."
license = "MIT"
repository = "https://github.com/FedericoPonzi/horust"
homepage = "https://github.com/FedericoPonzi/horust"
readme = "README.md"
keywords = ["init", "container", "supervisor"]
categories = ["command-line-utilities"]
include = ["src/**/*", "Cargo.*", "../LICENSE.txt", "README.md"]
rust-version = "1.74.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "~0.13"
anyhow = "~1.0"
log = "~0.4"

[dev-dependencies]
env_logger = "~0.11"

[build-dependencies]
prost-build = { version = "~0.13" }