[package]
name = "horustctl"
version = "0.1.0"
edition = "2024"
authors = ["Federico Ponzi <me@fponzi.me>"]
rust-version = "1.85.1"

[dependencies]
anyhow = "~1.0"
log = "~0.4"
env_logger = "~0.11"
clap = { version = "~4.5", features = ["derive"] }
horust-commands-lib = { version = "0.1.0" }

[dev-dependencies]
assert_cmd = "~2.1"
escargot = "0.5.15"
predicates = "~3.1"
rand = "~0.9"
tempfile = "~3"
