[package]
name = "horustctl"
version.workspace = true
edition = "2024"
authors = ["Federico Ponzi <me@fponzi.me>"]
rust-version = "1.85.1"
description = "CLI tool for interacting with a running Horust instance."
license = "MIT"
repository = "https://github.com/FedericoPonzi/horust"
homepage = "https://github.com/FedericoPonzi/horust"
keywords = ["init", "container", "supervisor"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "~1.0"
log = "~0.4"
env_logger = "~0.11"
clap = { version = "~4.6", features = ["derive"] }
horust-commands-lib.workspace = true

[dev-dependencies]
assert_cmd = "~2.2"
escargot = "0.5.15"
predicates = "~3.1"
rand = "~0.10"
tempfile = "~3"
